// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render with a title 1`] = `
<header
  className="sc-bdvvtL eiMmBc"
>
  <p>
    This is a title
  </p>
</header>
`;

exports[`Header should render without a title 1`] = `
<header
  className="sc-bdvvtL eiMmBc"
>
  <p>
    
  </p>
</header>
`;
